adicionada uma funcao para baixar os dados de sentimentos positivos e negativos

--- a/test-twitter-data-extraction.ipynb
+++ b/test-twitter-data-extraction.ipynb
@@ -2,19 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "24136df3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "GIT É UMA MEEERRRRDAAAA\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "4e0ecdfd",
    "metadata": {},
    "outputs": [],
@@ -22,7 +10,7 @@
     "import os\n",
     "import json\n",
     "import tweepy\n",
-    "# import pandas as pd"
+    "import pandas as pd"
    ]
   },
   {
@@ -77,77 +65,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eddde9ce",
-   "metadata": {},
-   "source": [
-    "### Verificação das credenciais"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "92f9a7da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "my_credentials = api.verify_credentials()\n",
-    "my_credentials\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d19c7ff3",
-   "metadata": {},
-   "source": [
-    "### testando a API com uma busca simples de tweets publicados com a hashtag pantanal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "86c1732f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "query = \"pantanal\"\n",
-    "locale = \"\"\n",
-    "language = \"pt\"\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e9723772",
-   "metadata": {},
-   "source": [
-    "### Usando o método search"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "3300d826",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "tweets = api.search_tweets(q = query, lang = language, tweet_mode = \"extended\")\n",
-    "\n",
-    "for tweet in tweets:\n",
-    "    try:\n",
-    "        print(tweet.retweeted_status.full_text)\n",
-    "        print(\"=====\")\n",
-    "    except AttributeError:\n",
-    "        print(tweet.full_text)\n",
-    "        print(\"=====\")\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "0f78305d",
    "metadata": {},
    "source": [
@@ -164,42 +81,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "8edb43cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "restaurantes = {\"mcdonalds\",\"méqui\",\"burger king\", \"girafas\", \"subway\",\n",
-    "                \"madero\", \"starbucks\", \"pizza hut\",\"pizzahut\", \"dominos\",\n",
-    "                \"fogo de chao\", \"habibs\"}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "12b17085",
-   "metadata": {},
-   "source": [
-    "#### SENTIMENTOS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "a79609f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sentimentos_positivos = {\"😍\", \"🥰\", \"😋\",\"🤩\",\"😀\",\"😇\"}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "2a236994",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sentimentos_negativos = {\"🤮\",\"🤢\",\"🤬\",\"😡\",\"😠\",\"💩\",\"😣\"}"
+    "restaurantes = {\"mcdonalds\",\"méqui\",\"burger king\", \"girafas\", \"subway\",\"madero\",\n",
+    "                \"starbucks\", \"pizza hut\", \"dominos\",\"habibs\",\"outback\",\"KFC\",\"Taco Bell\"}"
    ]
   },
   {
@@ -207,82 +95,118 @@
    "id": "19627d68",
    "metadata": {},
    "source": [
-    "### MINERACAO DE DADOS"
+    "### Função para minerar os dados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "e8647e2e",
+   "execution_count": 36,
+   "id": "47091a52",
    "metadata": {},
    "outputs": [],
    "source": [
-    "publicacoes = []"
+    "def data_mining(sentimento):\n",
+    "    \n",
+    "    sentimento = sentimento.lower();\n",
+    "    publicacoes = []\n",
+    "    \n",
+    "    if sentimento == \"positivo\":\n",
+    "        sentimentos = {\"😍\", \"🥰\", \"😋\",\"🤩\",\"😀\",\"😇\"}\n",
+    "    \n",
+    "    elif sentimento == \"negativo\":\n",
+    "        sentimentos = {\"🤮\",\"🤢\",\"🤬\",\"😡\",\"😠\",\"💩\",\"😣\"}\n",
+    "    \n",
+    "    else:\n",
+    "        raise ValueError(\"Parametro incorreto!\")\n",
+    "    \n",
+    "    \n",
+    "    for restaurante in restaurantes:\n",
+    "        for emoji in sentimentos:\n",
+    "            query = f\"{restaurante} AND {emoji}\"\n",
+    "            \n",
+    "            try:\n",
+    "                for status in tweepy.Cursor(api.search_tweets, q = query, lang=\"pt\",\n",
+    "                                            count=100).items(10000):\n",
+    "                    publicacoes.append(status)\n",
+    "            except:\n",
+    "                print(\"limite de requisicao estourado!\")\n",
+    "    \n",
+    "    return publicacoes"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "47091a52",
+   "cell_type": "markdown",
+   "id": "b9f3cd66",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "limite de requisicao estourado!\n",
-      "limite de requisicao estourado!\n",
-      "limite de requisicao estourado!\n",
-      "limite de requisicao estourado!\n"
-     ]
-    }
-   ],
    "source": [
-    "for restaurante in restaurantes:\n",
-    "    query = restaurante\n",
-    "\n",
-    "    try:\n",
-    "        for status in tweepy.Cursor(api.search_tweets, q = query, lang=\"pt\",\n",
-    "                                    count=200).items(10000):\n",
-    "            publicacoes.append(status)\n",
-    "    except:\n",
-    "        print(\"limite de requisicao estourado!\")"
+    "### Mineração"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "dde53399",
+   "execution_count": 14,
+   "id": "300e66fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "publicacoes_positivas = data_mining(\"positivo\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "b9343e02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "publicacoes_negativas = data_mining(\"negativo\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "f577cf22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for pub in publicacoes_positivas:\n",
+    "#     print(pub.text)\n",
+    "#     print(pub.created_at)\n",
+    "#     print(\"-------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "90cb7f46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for pub in publicacoes_negativas:\n",
+    "#     print(pub.text)\n",
+    "#     print(pub.created_at)\n",
+    "#     print(\"-------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "05d2eef0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "16669"
+       "(729, 111)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(publicacoes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "f577cf22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "for pub in publicacoes:\n",
-    "    print(pub.text)\n",
-    "    print(pub.created_at)\n",
-    "    print(\"-------\")\n",
-    "\"\"\";"
+    "len(publicacoes_positivas), len(publicacoes_negativas)"
    ]
   },
   {
@@ -290,45 +214,53 @@
    "id": "d6109852",
    "metadata": {},
    "source": [
-    "### passando os principais dados para um DataFrame"
+    "### Função para criar os DataFrames"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "f270e860",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cria_data_frame():\n",
-    "    from pandas import DataFrame\n",
+    "def cria_data_frame(dados: list) -> pd.DataFrame:\n",
     "    \n",
     "    id_autor, texto, data_publicacao = [], [], []\n",
     "\n",
-    "    for pub in publicacoes:\n",
+    "    for pub in dados:\n",
     "        id_autor.append(pub.id_str)\n",
     "        texto.append(pub.text)\n",
     "        data_publicacao.append(pub.created_at)\n",
     "    \n",
-    "    main_data = DataFrame({\"id_autor\":id_autor, \"texto\":texto ,\n",
-    "                           \"data_publicacao\":data_publicacao })\n",
+    "    main_data = pd.DataFrame({\"id_autor\": id_autor, \"texto\": texto ,\n",
+    "                           \"data_publicacao\": data_publicacao })\n",
     "    \n",
-    "    return main_data\n"
+    "    return main_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec17ac95",
+   "metadata": {},
+   "source": [
+    "### transformando em DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "id": "8ff07a3f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = cria_data_frame()"
+    "df_positivo = cria_data_frame(publicacoes_positivas)\n",
+    "df_negativo = cria_data_frame(publicacoes_negativas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "id": "fa156b73",
    "metadata": {},
    "outputs": [
@@ -361,33 +293,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1534617246508752896</td>\n",
-       "      <td>Hj comi o bibsfirra burguer do habibs:\\nAprese...</td>\n",
-       "      <td>2022-06-08 19:23:58+00:00</td>\n",
+       "      <td>1534956288387473410</td>\n",
+       "      <td>nunca gostei do habibs, e na única vez que ten...</td>\n",
+       "      <td>2022-06-09 17:51:11+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1534616823576023045</td>\n",
-       "      <td>Orando pra Deus reestabelecer a gargantinha do...</td>\n",
-       "      <td>2022-06-08 19:22:17+00:00</td>\n",
+       "      <td>1533459101765799942</td>\n",
+       "      <td>O auge pra mim foi ter habibs no Castelão onte...</td>\n",
+       "      <td>2022-06-05 14:41:54+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1534615082650456067</td>\n",
-       "      <td>@gabrielaanaaa Kkkkk ah para rainha do Habibs</td>\n",
-       "      <td>2022-06-08 19:15:22+00:00</td>\n",
+       "      <td>1532768987687309320</td>\n",
+       "      <td>Adoraria experimentar pena que eu não tenho um...</td>\n",
+       "      <td>2022-06-03 16:59:38+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1534611991133921281</td>\n",
-       "      <td>Eu tô muito desacreditado que paguei 15.90 num...</td>\n",
-       "      <td>2022-06-08 19:03:05+00:00</td>\n",
+       "      <td>1532565023289131008</td>\n",
+       "      <td>@_thecria O habibs é na esquina 😍</td>\n",
+       "      <td>2022-06-03 03:29:09+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1534610220114141185</td>\n",
-       "      <td>Eu tô com muita vontade de ir num rodízio de e...</td>\n",
-       "      <td>2022-06-08 18:56:02+00:00</td>\n",
+       "      <td>1532541435660091400</td>\n",
+       "      <td>Ganhei esfiha do habibs,chocolate amo y amo😍😋</td>\n",
+       "      <td>2022-06-03 01:55:26+00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -395,27 +327,119 @@
       ],
       "text/plain": [
        "              id_autor                                              texto  \\\n",
-       "0  1534617246508752896  Hj comi o bibsfirra burguer do habibs:\\nAprese...   \n",
-       "1  1534616823576023045  Orando pra Deus reestabelecer a gargantinha do...   \n",
-       "2  1534615082650456067      @gabrielaanaaa Kkkkk ah para rainha do Habibs   \n",
-       "3  1534611991133921281  Eu tô muito desacreditado que paguei 15.90 num...   \n",
-       "4  1534610220114141185  Eu tô com muita vontade de ir num rodízio de e...   \n",
+       "0  1534956288387473410  nunca gostei do habibs, e na única vez que ten...   \n",
+       "1  1533459101765799942  O auge pra mim foi ter habibs no Castelão onte...   \n",
+       "2  1532768987687309320  Adoraria experimentar pena que eu não tenho um...   \n",
+       "3  1532565023289131008                  @_thecria O habibs é na esquina 😍   \n",
+       "4  1532541435660091400      Ganhei esfiha do habibs,chocolate amo y amo😍😋   \n",
        "\n",
        "            data_publicacao  \n",
-       "0 2022-06-08 19:23:58+00:00  \n",
-       "1 2022-06-08 19:22:17+00:00  \n",
-       "2 2022-06-08 19:15:22+00:00  \n",
-       "3 2022-06-08 19:03:05+00:00  \n",
-       "4 2022-06-08 18:56:02+00:00  "
+       "0 2022-06-09 17:51:11+00:00  \n",
+       "1 2022-06-05 14:41:54+00:00  \n",
+       "2 2022-06-03 16:59:38+00:00  \n",
+       "3 2022-06-03 03:29:09+00:00  \n",
+       "4 2022-06-03 01:55:26+00:00  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df_positivo.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "dba08adc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_autor</th>\n",
+       "      <th>texto</th>\n",
+       "      <th>data_publicacao</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1532385165275701248</td>\n",
+       "      <td>@Oliver4Arthur Eu to te esperando faz 2h aqui ...</td>\n",
+       "      <td>2022-06-02 15:34:28+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1532155314887327744</td>\n",
+       "      <td>Porra deixaram nós sem habibs msm 😡 https://t....</td>\n",
+       "      <td>2022-06-02 00:21:07+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1532131862323265541</td>\n",
+       "      <td>@DerthWalter @trans_gabsdias É um absurdo habi...</td>\n",
+       "      <td>2022-06-01 22:47:56+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1532050520516579328</td>\n",
+       "      <td>@Coltro777 tiraram o nosso habibs da gnt😡</td>\n",
+       "      <td>2022-06-01 17:24:42+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1533172860201619457</td>\n",
+       "      <td>“Hambúrguer de esfiha do Habibs”!?\\n🤢🤮🤮🤮🤮</td>\n",
+       "      <td>2022-06-04 19:44:29+00:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              id_autor                                              texto  \\\n",
+       "0  1532385165275701248  @Oliver4Arthur Eu to te esperando faz 2h aqui ...   \n",
+       "1  1532155314887327744  Porra deixaram nós sem habibs msm 😡 https://t....   \n",
+       "2  1532131862323265541  @DerthWalter @trans_gabsdias É um absurdo habi...   \n",
+       "3  1532050520516579328          @Coltro777 tiraram o nosso habibs da gnt😡   \n",
+       "4  1533172860201619457          “Hambúrguer de esfiha do Habibs”!?\\n🤢🤮🤮🤮🤮   \n",
+       "\n",
+       "            data_publicacao  \n",
+       "0 2022-06-02 15:34:28+00:00  \n",
+       "1 2022-06-02 00:21:07+00:00  \n",
+       "2 2022-06-01 22:47:56+00:00  \n",
+       "3 2022-06-01 17:24:42+00:00  \n",
+       "4 2022-06-04 19:44:29+00:00  "
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_negativo.head()"
    ]
   },
   {
@@ -428,46 +452,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "251e5598",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# separando as colunas pot \\t para não dar problemar ao carregar os dados em um novo df\n",
-    "df.to_csv(\"raw-data/coleta-2.csv\", sep=\"\\t\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "6779a837",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test de carregamento\n",
-    "# df = pd.read_csv(\"raw-data/coleta-1.csv\", delimiter=\"\\t\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "7a119f27",
+   "execution_count": 49,
+   "id": "1d709a6e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(Timestamp('2022-05-31 01:43:41+0000', tz='UTC'),\n",
-       " Timestamp('2022-06-08 19:27:52+0000', tz='UTC'))"
+       "(Timestamp('2022-06-01 13:41:57+0000', tz='UTC'),\n",
+       " Timestamp('2022-06-10 01:30:38+0000', tz='UTC'))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.data_publicacao.min(), df.data_publicacao.max()"
+    "df_negativo[\"data_publicacao\"].min(), df_negativo[\"data_publicacao\"].max(),"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "251e5598",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# separando as colunas pot \\t para não dar problemar ao carregar os dados em um novo df\n",
+    "\n",
+    "df_positivo.to_csv(\"raw-data/coleta-positivo-1.csv\", sep=\"\\t\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "a10262eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_negativo.to_csv(\"raw-data/coleta-negativo-1.csv\", sep=\"\\t\", index=False)"
    ]
   }
  ],
