limpeza e organizacao dos dados

--- a/downloading-data.ipynb
+++ b/downloading-data.ipynb
@@ -24,13 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "eb1218bb",
    "metadata": {},
    "outputs": [],
    "source": [
     "sentimentos_positivos = {\"😍\", \"🥰\", \"😋\",\"🤩\",\"😀\",\"😇\"}\n",
-    "sentimentos_negativos = {\"🤮\",\"🤢\",\"🤬\",\"😡\",\"😠\",\"💩\",\"😣\"}"
+    "sentimentos_negativos = {\"🤮\",\"🤢\",\"🤬\",\"😡\",\"😠\",\"💩\"}"
    ]
   },
   {
@@ -42,22 +42,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "47b05f4e",
-   "metadata": {},
-   "source": [
-    "### funcao para minerar os dados"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "beb0c79e",
    "metadata": {},
    "outputs": [],
    "source": [
     "#criando as querys\n",
-    "\n",
     "def cria_querys(restaurantes, emojis):\n",
     "    querys = []\n",
     "    \n",
@@ -70,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "460835a9",
    "metadata": {},
    "outputs": [],
@@ -81,159 +72,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "6c10452c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def data_search(limit: int, list_of_querys: list) -> list:\n",
+    "def search(limit: int, list_of_querys: list) -> list:\n",
     "    tweets = []\n",
-    "    \n",
-    "    # buscando as querys\n",
     "    for query in list_of_querys:\n",
-    "        \n",
-    "        for tweet in sntwitter.TwitterSearchScraper(query +\" lang:pt\").get_items():\n",
-    "            \n",
+    "        for tweet in sntwitter.TwitterSearchScraper(query + \" lang:pt\").get_items():\n",
     "            if len(tweets) >= limit:\n",
-    "                print(\"A quantidade de tweets requisitados foi alcançada\")\n",
-    "                break;\n",
-    "            \n",
-    "            else:\n",
-    "                tweets.append({\"date\":tweet.date, \"user_name\" :tweet.user.username,\n",
-    "                               \"tweet\":tweet.content})\n",
+    "                break;  \n",
+    "\n",
+    "            tweets.append({\"date\":tweet.date, \"user_name\" :tweet.user.username, \"tweet\":tweet.content})\n",
     "    return tweets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "73275151",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n",
-      "A quantidade de tweets requisitados foi alcançada\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tweets_positivos = data_search(3000, querys_positivos)\n",
-    "tweets_negativos = data_search(3000, querys_negativos)"
+    "tweets_positivos = search(5e4, querys_positivos);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "1b4d1a2b",
+   "execution_count": 21,
+   "id": "35f4906f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3000"
+       "50000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(tweets_positivos), len(tweets_negativos)"
+    "len(tweets_positivos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "5a4e33f2",
+   "execution_count": 31,
+   "id": "7e8271c6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for tweet in tweets_positivos:\n",
-    "#     print(tweet[\"tweet\"])\n",
-    "#     print(tweet[\"date\"])\n",
-    "#     print(\"-\"*100)"
+    "tweets_negativos = search(5e4, querys_negativos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "d0c1edfd",
+   "execution_count": 32,
+   "id": "ff648fd3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14843"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# for tweet in tweets_negativos:\n",
-    "#     print(tweet[\"tweet\"])\n",
-    "#     print(tweet[\"date\"])\n",
-    "#     print(\"-\"*100)"
+    "len(tweets_negativos)"
    ]
   },
   {
@@ -246,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "efcc3776",
    "metadata": {},
    "outputs": [],
@@ -255,24 +169,23 @@
     "    texto, nome_usuario, data_publicacao = [], [], []\n",
     "\n",
     "    for tweet in dados:\n",
-    "        texto.append(tweet[\"tweet\"])\n",
+    "        texto.append(tweet[\"tweet\"].replace(\"\\t\", \"\"))\n",
     "        data_publicacao.append(tweet[\"date\"])\n",
     "        nome_usuario.append(tweet[\"user_name\"])\n",
     "    \n",
     "    main_data = pd.DataFrame({\"user_name\":nome_usuario, \"tweet\":texto,\n",
     "                           \"date\":data_publicacao})\n",
-    "    \n",
     "    return main_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "id": "f4828704",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_positivo = cria_data_frame(tweets_positivos)\n",
+    "#df_positivo = cria_data_frame(tweets_positivos)\n",
     "df_negativo = cria_data_frame(tweets_negativos)"
    ]
   },
@@ -286,12 +199,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "2954443a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_positivo.to_csv(\"raw-data/coleta-positivo-1.csv\", sep=\"\\t\", index=False)\n",
+    "df_positivo.to_csv(\"raw-data/coleta-positivo-1.csv\", sep=\"\\t\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "eb1f2a8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_negativo.to_csv(\"raw-data/coleta-negativo-1.csv\", sep=\"\\t\", index=False)"
    ]
   }
