--- a/test-twitter-data-extraction.ipynb
+++ b/test-twitter-data-extraction.ipynb
@@ -105,33 +105,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def data_mining(sentimento):\n",
+    "def data_mining(sentimento):\n",
+    "\n",
+    "    sentimento = sentimento.lower();\n",
+    "    publicacoes = []\n",
     "    \n",
-    "#     sentimento = sentimento.lower();\n",
-    "#     publicacoes = []\n",
+    "    if sentimento == \"positivo\":\n",
+    "        sentimentos = {\"😍\", \"🥰\", \"😋\",\"🤩\",\"😀\",\"😇\"}\n",
     "    \n",
-    "#     if sentimento == \"positivo\":\n",
-    "#         sentimentos = {\"😍\", \"🥰\", \"😋\",\"🤩\",\"😀\",\"😇\"}\n",
+    "    elif sentimento == \"negativo\":\n",
+    "        sentimentos = {\"🤮\",\"🤢\",\"🤬\",\"😡\",\"😠\",\"💩\",\"😣\"}\n",
     "    \n",
-    "#     elif sentimento == \"negativo\":\n",
-    "#         sentimentos = {\"🤮\",\"🤢\",\"🤬\",\"😡\",\"😠\",\"💩\",\"😣\"}\n",
-    "    \n",
-    "#     else:\n",
-    "#         raise ValueError(\"Parametro incorreto!\")\n",
+    "    else:\n",
+    "        raise ValueError(\"Parametro incorreto!\")\n",
     "    \n",
     "    \n",
-    "#     for restaurante in restaurantes:\n",
-    "#         for emoji in sentimentos:\n",
-    "#             query = f\"{restaurante} AND {emoji}\"\n",
+    "    for restaurante in restaurantes:\n",
+    "        for emoji in sentimentos:\n",
+    "            query = f\"{restaurante} AND {emoji}\"\n",
     "            \n",
-    "#             try:\n",
-    "#                 for status in tweepy.Cursor(api.search_tweets, q = query, lang=\"pt\",\n",
-    "#                                             count=100).items(10000):\n",
-    "#                     publicacoes.append(status)\n",
-    "#             except:\n",
-    "#                 print(\"limite de requisicao estourado!\")\n",
+    "            try:\n",
+    "                for status in tweepy.Cursor(api.search_tweets, q = query, lang=\"pt\",\n",
+    "                                            count=100).items(10000):\n",
+    "                    publicacoes.append(status)\n",
+    "            except:\n",
+    "                print(\"limite de requisicao estourado!\")\n",
     "    \n",
-    "#     return publicacoes"
+    "    return publicacoes"
    ]
   },
   {
@@ -149,7 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#publicacoes_positivas = data_mining(\"positivo\");"
+    "publicacoes_positivas = data_mining(\"positivo\");"
    ]
   },
   {
@@ -169,10 +169,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for pub in publicacoes_positivas:\n",
-    "#     print(pub.text)\n",
-    "#     print(pub.created_at)\n",
-    "#     print(\"-------\")"
+    "for pub in publicacoes_positivas:\n",
+    "    print(pub.text)\n",
+    "    print(pub.created_at)\n",
+    "    print(\"-\"*100)"
    ]
   },
   {
@@ -553,29 +553,7 @@
     "for pub in publicacoes_negativas:\n",
     "    print(pub.text)\n",
     "    print(pub.created_at)\n",
-    "    print(\"-------\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "05d2eef0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "105"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#len(publicacoes_positivas)\n",
-    "len(publicacoes_negativas)"
+    "    print(\"-\"*100)"
    ]
   },
   {
@@ -821,35 +799,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "1d709a6e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(Timestamp('2022-06-01 13:41:57+0000', tz='UTC'),\n",
-       " Timestamp('2022-06-10 01:30:38+0000', tz='UTC'))"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_negativo[\"data_publicacao\"].min(), df_negativo[\"data_publicacao\"].max(),"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 52,
    "id": "251e5598",
    "metadata": {},
    "outputs": [],
    "source": [
     "# separando as colunas pot \\t para não dar problemar ao carregar os dados em um novo df\n",
-    "\n",
     "df_positivo.to_csv(\"raw-data/coleta-positivo-1.csv\", sep=\"\\t\", index=False)"
    ]
   },
